force-app/main/default/objects/Invoice__c/fields/Idempotency_Key__c.field-meta.xml
<CustomField>
    <fullName>Idempotency_Key__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>중복 청구 방지 멱등키</description>
    <label>Idempotency Key</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>