force-app/main/default/objects/Invoice__c/fields/Labor_Amount__c.field-meta.xml
<CustomField>
    <fullName>Labor_Amount__c</fullName>
    <description>공임 합계</description>
    <label>Labor Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>