force-app/main/default/objects/Invoice__c/fields/Parts_Amount__c.field-meta.xml
<CustomField>
    <fullName>Parts_Amount__c</fullName>
    <description>부품비 합계</description>
    <label>Parts Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>