force-app/main/default/objects/Invoice__c/fields/Payment_Reference__c.field-meta.xml
<CustomField>
    <fullName>Payment_Reference__c</fullName>
    <description>결제 게이트웨이 트랜잭션 ID</description>
    <label>Payment Reference</label>
    <length>100</length>
    <type>Text</type>
</CustomField>