force-app/main/default/objects/Invoice__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <filterScope>Everything</filterScope>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Work_Order__c</columns>
    <columns>Payment_Status__c</columns>
    <columns>Total_Amount__c</columns>
    <columns>Issued_Date__c</columns>
    <label>All</label>
</ListView>